# gst_stream_video

./: CMakeLists.txt
gst_stream_video/: CMakeLists.txt  gst_stream_video.cpp  gst_stream_video.h
