# CMakeList.txt : CMake project for gst_stream_video, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (gst_stream_video "gst_stream_video.cpp" "gst_stream_video.h")

# TODO: Add tests and install targets if needed.
